# yarawesome

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
apps/core/: apps.py  models.py  views.py
apps/rule_collections/: api.py  apps.py  models.py  serializers.py  tasks.py  views.py
apps/rule_editor/: api.py  apps.py  serializers.py
apps/rule_import/: api.py  apps.py  models.py  serializers.py  tasks.py  views.py
apps/rule_lab/: api.py  apps.py  models.py  serializers.py  tasks.py  views.py
apps/rules/: api.py  apps.py  models.py  serializers.py  tasks.py  views.py
core/: __init__.py  apps.py  models.py  views.py
core/management/commands/: publish_collection_index.py  rule_indexer.py  watchstatic.py
core/middleware/: __init__.py  rule_indexer.py
core/templates/core/: base.html  index.html
core/utils/: database.py  search_index.py
rule_browser/: api.py  apps.py  serializers.py  views.py
rule_browser/templates/rule_browser/: my_rules.html  rule.html  search.html  (+1 more)
rule_collections/: api.py  apps.py  serializers.py  views.py
rule_editor/: api.py  apps.py  views.py
rule_import/: api.py  apps.py  models.py  serializers.py  views.py
rules/: api.py  apps.py  serializers.py  views.py
sample_yara_rules/: BazaarBackdoor.yara  CrunchyRoll.yara  Ganelp.yara
templates/registration/: logged_out.html  login.html
yara_rule_editor/: apps.py  views.py
yarawesome/: asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
yarawesome/daemons/: rule_indexer.py
yarawesome/utils/: __init__.py  database.py  search_index.py
(+55 files in other folders)
